// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BiosCard should not render hasReleaseDate 1`] = `
<DocumentFragment>
  <article
    class="pf-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-l-stack pf-m-gutter"
      >
        <div
          class="pf-l-stack__item"
        >
          <div
            class="pf-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="OUIA-Generated-Text-6"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              BIOS
            </h1>
          </div>
        </div>
        <div
          class="pf-l-stack__item pf-m-fill"
        >
          <div
            class="pf-c-content"
          >
            <dl
              class=""
            >
              <dt
                class=""
                data-ouia-component-id="Vendor title"
              >
                Vendor
              </dt>
              <dd
                class=""
                data-ouia-component-id="Vendor value"
              >
                test-vendor
              </dd>
              <dt
                class=""
                data-ouia-component-id="Version title"
              >
                Version
              </dt>
              <dd
                class=""
                data-ouia-component-id="Version value"
              >
                test-version
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`BiosCard should not render hasVendor 1`] = `
<DocumentFragment>
  <article
    class="pf-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-l-stack pf-m-gutter"
      >
        <div
          class="pf-l-stack__item"
        >
          <div
            class="pf-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="OUIA-Generated-Text-4"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              BIOS
            </h1>
          </div>
        </div>
        <div
          class="pf-l-stack__item pf-m-fill"
        >
          <div
            class="pf-c-content"
          >
            <dl
              class=""
            >
              <dt
                class=""
                data-ouia-component-id="Version title"
              >
                Version
              </dt>
              <dd
                class=""
                data-ouia-component-id="Version value"
              >
                test-version
              </dd>
              <dt
                class=""
                data-ouia-component-id="Release date title"
              >
                Release date
              </dt>
              <dd
                class=""
                data-ouia-component-id="Release date value"
              >
                01 Apr 2014
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`BiosCard should not render hasVersion 1`] = `
<DocumentFragment>
  <article
    class="pf-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-l-stack pf-m-gutter"
      >
        <div
          class="pf-l-stack__item"
        >
          <div
            class="pf-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="OUIA-Generated-Text-5"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              BIOS
            </h1>
          </div>
        </div>
        <div
          class="pf-l-stack__item pf-m-fill"
        >
          <div
            class="pf-c-content"
          >
            <dl
              class=""
            >
              <dt
                class=""
                data-ouia-component-id="Vendor title"
              >
                Vendor
              </dt>
              <dd
                class=""
                data-ouia-component-id="Vendor value"
              >
                test-vendor
              </dd>
              <dt
                class=""
                data-ouia-component-id="Release date title"
              >
                Release date
              </dt>
              <dd
                class=""
                data-ouia-component-id="Release date value"
              >
                01 Apr 2014
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`BiosCard should render correctly - no data 1`] = `
<DocumentFragment>
  <article
    class="pf-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-l-stack pf-m-gutter"
      >
        <div
          class="pf-l-stack__item"
        >
          <div
            class="pf-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="OUIA-Generated-Text-1"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              BIOS
            </h1>
          </div>
        </div>
        <div
          class="pf-l-stack__item pf-m-fill"
        >
          <div
            class="pf-c-content"
          >
            <dl
              class=""
            >
              <dt
                class=""
                data-ouia-component-id="Vendor title"
              >
                Vendor
              </dt>
              <dd
                class=""
                data-ouia-component-id="Vendor value"
              >
                <div
                  class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                >
                  <span
                    class="pf-u-screen-reader"
                  />
                </div>
              </dd>
              <dt
                class=""
                data-ouia-component-id="Version title"
              >
                Version
              </dt>
              <dd
                class=""
                data-ouia-component-id="Version value"
              >
                <div
                  class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                >
                  <span
                    class="pf-u-screen-reader"
                  />
                </div>
              </dd>
              <dt
                class=""
                data-ouia-component-id="Release date title"
              >
                Release date
              </dt>
              <dd
                class=""
                data-ouia-component-id="Release date value"
              >
                <div
                  class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                >
                  <span
                    class="pf-u-screen-reader"
                  />
                </div>
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`BiosCard should render correctly with data - wrong date 1`] = `
<DocumentFragment>
  <article
    class="pf-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-l-stack pf-m-gutter"
      >
        <div
          class="pf-l-stack__item"
        >
          <div
            class="pf-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="OUIA-Generated-Text-3"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              BIOS
            </h1>
          </div>
        </div>
        <div
          class="pf-l-stack__item pf-m-fill"
        >
          <div
            class="pf-c-content"
          >
            <dl
              class=""
            >
              <dt
                class=""
                data-ouia-component-id="Vendor title"
              >
                Vendor
              </dt>
              <dd
                class=""
                data-ouia-component-id="Vendor value"
              >
                test-vendor
              </dd>
              <dt
                class=""
                data-ouia-component-id="Version title"
              >
                Version
              </dt>
              <dd
                class=""
                data-ouia-component-id="Version value"
              >
                test-version
              </dd>
              <dt
                class=""
                data-ouia-component-id="Release date title"
              >
                Release date
              </dt>
              <dd
                class=""
                data-ouia-component-id="Release date value"
              >
                Not available
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`BiosCard should render correctly with data 1`] = `
<DocumentFragment>
  <article
    class="pf-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-l-stack pf-m-gutter"
      >
        <div
          class="pf-l-stack__item"
        >
          <div
            class="pf-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="OUIA-Generated-Text-2"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              BIOS
            </h1>
          </div>
        </div>
        <div
          class="pf-l-stack__item pf-m-fill"
        >
          <div
            class="pf-c-content"
          >
            <dl
              class=""
            >
              <dt
                class=""
                data-ouia-component-id="Vendor title"
              >
                Vendor
              </dt>
              <dd
                class=""
                data-ouia-component-id="Vendor value"
              >
                test-vendor
              </dd>
              <dt
                class=""
                data-ouia-component-id="Version title"
              >
                Version
              </dt>
              <dd
                class=""
                data-ouia-component-id="Version value"
              >
                test-version
              </dd>
              <dt
                class=""
                data-ouia-component-id="Release date title"
              >
                Release date
              </dt>
              <dd
                class=""
                data-ouia-component-id="Release date value"
              >
                01 Apr 2014
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`BiosCard should render extra 1`] = `
<DocumentFragment>
  <article
    class="pf-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-l-stack pf-m-gutter"
      >
        <div
          class="pf-l-stack__item"
        >
          <div
            class="pf-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="OUIA-Generated-Text-7"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              BIOS
            </h1>
          </div>
        </div>
        <div
          class="pf-l-stack__item pf-m-fill"
        >
          <div
            class="pf-c-content"
          >
            <dl
              class=""
            >
              <dt
                class=""
                data-ouia-component-id="Vendor title"
              >
                Vendor
              </dt>
              <dd
                class=""
                data-ouia-component-id="Vendor value"
              >
                test-vendor
              </dd>
              <dt
                class=""
                data-ouia-component-id="Version title"
              >
                Version
              </dt>
              <dd
                class=""
                data-ouia-component-id="Version value"
              >
                test-version
              </dd>
              <dt
                class=""
                data-ouia-component-id="Release date title"
              >
                Release date
              </dt>
              <dd
                class=""
                data-ouia-component-id="Release date value"
              >
                01 Apr 2014
              </dd>
              <dt
                class=""
                data-ouia-component-id="something title"
              >
                something
              </dt>
              <dd
                class=""
                data-ouia-component-id="something value"
              >
                test
              </dd>
              <dt
                class=""
                data-ouia-component-id="with click title"
              >
                with click
              </dt>
              <dd
                class=""
                data-ouia-component-id="with click value"
              >
                <div>
                  <a
                    href="/undefined"
                  >
<<<<<<< HEAD
                    <div
                      className="pf-l-stack pf-m-gutter"
                    >
                      <StackItem>
                        <div
                          className="pf-l-stack__item"
                        >
                          <TextContent>
                            <div
                              className="pf-c-content"
                            >
                              <Text
                                component="h1"
                              >
                                <h1
                                  className=""
                                  data-ouia-component-id="OUIA-Generated-Text-7"
                                  data-ouia-component-type="PF4/Text"
                                  data-ouia-safe={true}
                                  data-pf-content={true}
                                >
                                  BIOS
                                </h1>
                              </Text>
                            </div>
                          </TextContent>
                        </div>
                      </StackItem>
                      <StackItem
                        isFilled={true}
                      >
                        <div
                          className="pf-l-stack__item pf-m-fill"
                        >
                          <TextContent>
                            <div
                              className="pf-c-content"
                            >
                              <TextList
                                component="dl"
                              >
                                <dl
                                  className=""
                                >
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Vendor title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Vendor title"
                                    >
                                      Vendor
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Vendor value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Vendor value"
                                    >
                                      test-vendor
                                    </dd>
                                  </TextListItem>
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Version title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Version title"
                                    >
                                      Version
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Version value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Version value"
                                    >
                                      test-version
                                    </dd>
                                  </TextListItem>
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Release date title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Release date title"
                                    >
                                      Release date
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Release date value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Release date value"
                                    >
                                      <DateFormat
                                        date={2014-04-01T00:00:00.000Z}
                                        type="onlyDate"
                                      >
                                        01 Apr 2014
                                      </DateFormat>
                                    </dd>
                                  </TextListItem>
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="something title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="something title"
                                    >
                                      something
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="something value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="something value"
                                    >
                                      test
                                    </dd>
                                  </TextListItem>
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="with click title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="with click title"
                                    >
                                      with click
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="with click value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="with click value"
                                    >
                                      <div>
                                        <Clickable
                                          onClick={[Function]}
                                          value="1 tests"
                                        >
                                          <Link
                                            to="localhost:3000/example/path/undefined"
                                          >
                                            <a
                                              href="localhost:3000/example/path/undefined"
                                            >
                                              1 tests
                                            </a>
                                          </Link>
                                        </Clickable>
                                      </div>
                                    </dd>
                                  </TextListItem>
                                </dl>
                              </TextList>
                            </div>
                          </TextContent>
                        </div>
                      </StackItem>
                    </div>
                  </Stack>
=======
                    1 tests
                  </a>
>>>>>>> f3af141 (chore(Cards): Convert tests to testing-library)
                </div>
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;
